--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,25 +1,91 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Homes</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Группа</th>
+      <th>URL</th>
+      <th>Объем трафика</th>
+      <th>Модификаторы</th>
+
     </tr>
   </thead>
-
   <tbody>
-    <% @homes.each do |home| %>
       <tr>
-        <td><%= link_to 'Show', home %></td>
-        <td><%= link_to 'Edit', edit_home_path(home) %></td>
-        <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          Женщины, <=24 лет
+        </td>
+        <td>
+          <a href="#">ВашСайт.ru</a>
+        </td>
+        <td>
+          100%
+        </td>
+
+        <td>
+
+        </td>
       </tr>
-    <% end %>
+      <tr>
+        <td>
+          Женщины, >24 лет
+        </td>
+        <td>
+          <a href="#">ВашСайт.ru/women24-versionA</a>
+        </td>
+        <td>
+          70%
+        </td>
+
+        <td>
+
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+
+        </td>
+        <td>
+          <a href="#">ВашСайт.ru/women24-versionB</a>
+        </td>
+        <td>
+          30%
+        </td>
+
+        <td>
+
+        </td>
+      </tr>
+
+
+      <tr>
+        <td>
+          Мужчины, <=50 лет
+        </td>
+        <td>
+          <a href="#">ВашСайт.ru/men</a>
+        </td>
+        <td>
+          100%
+        </td>
+
+        <td>
+
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Мужчины, >50 лет
+        </td>
+        <td>
+          <a href="#">ВашСайт.ru/men</a>
+        </td>
+        <td>
+          100%
+        </td>
+
+        <td>
+            Увеличить ценник
+        </td>
+      </tr>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Home', new_home_path %>
