--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,4 @@
+<div style="width:100%; padding:50px; background-image:url('<%=asset_url('background2.jpg')%>')">
 <table class="table">
   <thead>
     <tr>
@@ -84,8 +85,9 @@
         </td>
 
         <td>
-            Увеличить ценник
+            Увеличить шрифт ценника: 125%
         </td>
       </tr>
   </tbody>
 </table>
+</div>
